--- a/html/templates/includes/layout.html
+++ b/html/templates/includes/layout.html
@@ -24,7 +24,7 @@
     <link href="/static/externo/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom fontes -->
-    <link href="/static/externo/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
@@ -51,6 +51,7 @@
     <script src="/static/js/inlines.js"></script>
 
     <script src="/static/jsi18n/{{ LANGUAGE_CODE }}/djangojs.js"></script>
+
 
     {% block specific_scripts %}{% endblock %}
 
