--- a/html/templates/base_shipment_details.html
+++ b/html/templates/base_shipment_details.html
@@ -80,7 +80,7 @@
                   <th>{% trans "Validade" %}</th>
                   <th class="center">{% trans "Tempo em estoque" %}</th>
                   <th class="center">{% trans "Quantidade" %}</th>
-                  {% if user|has_user_perm:'view_users' %}
+                  {% if user|has_user_perm:'view_users' or user|has_store_perm:'collaborator' %}
                   <th>{% trans "Usuário" %}</th>
                   {% endif %}
                   {% if shipment.status == 1 and user|has_shipment_perm:'add_productservice' or shipment.status > 1 %}
@@ -123,7 +123,7 @@
                     {{ days_in_voi_stock }} {% trans "dias" %}
                   </td>
                   <td class="center">{{ product.quantity }}</td>
-                  {% if user|has_user_perm:'view_users' %}
+                  {% if user|has_user_perm:'view_users' or user|has_store_perm:'collaborator' %}
                   <td>{{ shipment.user.first_name }}</td>
                   {% endif %}
                   {% if shipment.status == 1 and user|has_shipment_perm:'add_productservice' or shipment.status > 1 %}
@@ -149,7 +149,7 @@
               </tbody>
             </table>
           </div>
-          {% if user|has_user_perm:'view_users' %}
+          {% if user|has_user_perm:'view_users' or user|has_store_perm:'collaborator' %}
           <!-- Bloco Informacoes do usuario -->
 
           <div class="row">
