--- a/html/templates/product_details.html
+++ b/html/templates/product_details.html
@@ -157,7 +157,7 @@
                 </div>
 
               {% if user|has_product_perm:'change_product' %}
-              <a href="{% url 'product_edit' product.id %}" class="btn btn-warning"><i class="fa fa-fw fa-pencil"></i> {% trans "Editar" %}</a>
+              <a href="{% url 'product_edit' product.id %}" class="btn btn-warning"><i class="fas fa-pencil-alt"></i> {% trans "Editar" %}</a>
               {% endif %}
               {% if user|has_product_perm:'delete_product' and shipments == 0 %}
               <a href="#" class="btn btn-danger send-btn-delete"><i class="fa fa-fw fa-trash"></i> {% trans "Excluir" %}</a>
@@ -172,7 +172,7 @@
               </span>
               {% endif %}
               <br><br>
-              <a href="{% url 'product_stock' %}"><i class="fa fa-fw fa-long-arrow-left"></i> {% trans "Voltar" %}</a><br><br><br>
+              <a href="{% url 'product_stock' %}"><i class="fas fa-arrow-left"></i> {% trans "Voltar" %}</a><br><br><br>
             </div>
         </div>
         <div class="col-md-3 sidebar">
