--- a/html/templates/product_stock.html
+++ b/html/templates/product_stock.html
@@ -108,7 +108,7 @@
           {% endif %}
           {% if products.paginator.count > 0 %}
           {% if user|has_shipment_perm:'add_shipment' %}
-            <a class="btn btn-default" id="btn-add-shipment" data-action-url="{% url 'shipment_add' %}"><i class="fa fa-amazon"></i> {% trans "Criar Envio para Amazon" %}</a>
+            <a class="btn btn-default" id="btn-add-shipment" data-action-url="{% url 'shipment_add' %}"><i class="fab fa-amazon"></i> {% trans "Criar Envio para Amazon" %}</a>
           {% endif %}
           {% if user|has_shipment_perm:'add_fbm_shipment' %}
             <a class="btn btn-default" id="btn-add-merchant-shipment" data-action-url="{% url 'merchant_shipment_add' %}"><i class="fa fa-ship"></i> {% trans "Criar Envio Merchant" %}</a>
@@ -212,7 +212,7 @@
                       <!-- somente admin visualiza o botao de editar status-->
 
                       <a id="mudar-status-{{ product.id }}" class="mudar-status btn btn-default" href="javascript:void(0);">
-                          <i class="fa fa-pencil"></i>
+                          <i class="fas fa-pencil-alt"></i>
                       </a>
 
                       <!-- fim botao -->
