--- a/html/templates/terms.html
+++ b/html/templates/terms.html
@@ -121,8 +121,19 @@
 
 
                         <p>
-                            &nbsp;</p><p>
-                            <strong>15- Do Invoice</strong></p>
+                            &nbsp;</p>
+
+                        <p>
+                            <strong>15- Da Devolução de Produtos</strong></p>
+                        <p>O Voi Services apenas aceitará a devolução de produtos que estejam com algum tipo de defeito de fabricação. Conforme citado acima no item 13, é de responsabilidade do usuário assinanate ou não a verificação das informações de cada produto constantes nos lotes antes de finalizar a compra. O VOI Services não aceitará devolução de produtos por divergências de valores após a compra do lote.</p>
+                        <p></p>
+
+
+                        <p>
+                            &nbsp;</p>
+
+                        <p>
+                            <strong>16- Do Invoice</strong></p>
                         <p>O Voi Services emite o Invoice dos produtos adquiridos em ate 48 horas após a solcitiação.</p>
                         <p></p><p></p>
                         <p><strong>16 - Do Shipping e Delivery</strong></p>
